# transcription_pipeline

./: .gitignore  README.md  config.py  dtos.py  main.py  makefile  mypy.ini  paths.py  pyproject.toml  requirements.txt  schemas.py  transcribe.py  transcriber_pipeline.drawio
alembic/: env.py
alembic/versions/: 4c10df551d74_create_initial_tables.py  cd3e65702b00_initial_migration.py  d5b5cf03cdc0_create_initial_tables.py
database/: __init__.py  models.py
service/: database.py  database_handler.py  downloader.py  transcriber.py
